--- a/public/handlebars/playlists/show.hbs
+++ b/public/handlebars/playlists/show.hbs
@@ -1,17 +1,22 @@
-<header>
+<header >
 		<div class="actions">
+			{{#if playlist/songs}}
 			<button data-icon="9">Play</button>
-			<button data-icon="+">Add Song</button>
+			{{/if}}
+			<button data-icon="+">Add Songs</button>
 			<button data-icon="y">Settings</button>
 		</div>
-    <h2>{{playlist/name}}</h2>
+    <h2>{{playlist/titlename}}</h2>
+		<span>{{playlist/descriptiontext}}</span>
 </header>
-{{#if playlist/songs}}
-<ul class='songs'>
-  {{#each playlist/songs}}
-    <li>{{this/song/title}}</li>
-  {{/each}}
-</ul>
-{{else}}
-This playlist has no songs.
-{{/if}}
+<article class="playlistEdit">
+	{{#if playlist/songs}}
+		<ul class='songs'>
+			{{#each playlist/songs}}
+				<li>{{this/song/title}}</li>
+			{{/each}}
+		</ul>
+	{{else}}
+		This playlist has no songs.
+	{{/if}}
+</article>
