--- a/public/handlebars/playlists/show.hbs
+++ b/public/handlebars/playlists/show.hbs
@@ -4,7 +4,7 @@
 			<button data-icon="9">Play</button>
 			{{/if}}
 			<button data-icon="+">Add Songs</button>
-			<button data-icon="y">Settings</button>
+			<button id="settings" data-icon="y" data-editpath="{{playlist/editpath}}">Settings</button>
 		</div>
     <h2>{{playlist/titlename}}</h2>
 		<span>{{playlist/descriptiontext}}</span>
