Saving my stuff locally

--- a/public/handlebars/browse/playlist.hbs
+++ b/public/handlebars/browse/playlist.hbs
@@ -1,4 +1,4 @@
-        <section class="browse">
+        <article class="browse">
 		<header> 
 			<h3> Browse playlist </h3>
 		</header>
@@ -27,4 +27,4 @@
                                 {{/each}}
         		</ul>
 		</section>
-	</section>
+	</article>
