--- a/public/stylesheets/search/show.css
+++ b/public/stylesheets/search/show.css
@@ -1,6 +1,12 @@
+.searchBox{padding:10px;}
+.floatRight {float:right; margin-left:10px;}
+.floatLeft {float:left; margin-right:10px;}
 .search{ padding:10px; }
 .search > nav a{ padding:3px 6px;  margin:0 3px;  background-color:#333; color:#fff;  border-radius:4px;  -moz-border-radius:4px; }
-.search article{ margin-top: 10px; border-bottom:1px #333 solid;}
-.floatRight {float:right;}
-.floatLeft {float:left; margin-right:10px;}
-.search .artistInformation{overflow:hidden;}
+.search article{ padding: 10px 0; overflow:hidden;}
+.search article {border-top:1px solid #333}
+.search .artistInformation, .search .songInformation {overflow:hidden;}
+.search .songResults section > ul { padding:10px 0;}
+
+.search .more {clear:left;}
+.search .more a {float:right;}
