--- a/public/handlebars/profiles/edit.hbs
+++ b/public/handlebars/profiles/edit.hbs
@@ -2,7 +2,7 @@
 <form id="edit_profile" {{#if profile}}action="/profiles/update" method="PUT"{{else}}action="/profiles" method="POST" {{/if}}>
   <div>
     <label for="bio">Bio</label>
-    <textarea name="bio" id="bio"></textarea>
+    <textarea name="bio" id="bio">{{#if profile}}{{profile/bio}}{{/if}}</textarea>
   </div>
   <button type='submit'>Save</button>
 </form>
