adding lastfm auth provider. playlist no longer auto-plays songs

--- a/app/views/shared/_login_dialog.html.erb
+++ b/app/views/shared/_login_dialog.html.erb
@@ -4,5 +4,6 @@
     <li><%= link_to_sign_in :myspace %></li>
     <li><%= link_to_sign_in :twitter %></li>
     <li><%= link_to_sign_in :google %></li>
+    <li><%= link_to_sign_in :lastfm %></li>
   </ul>
 </div>
