--- a/public/handlebars/users/show.hbs
+++ b/public/handlebars/users/show.hbs
@@ -14,7 +14,10 @@
   <h2>{{user/name}}</h2>
   <p>
     {{#if user/profile}} 
-      {{user/profile/bio}}
+      <p>{{user/profile/bio}}</p>
+      {{#if user/profile/website}}
+      <strong>Website:</strong> {{user/profile/website}}
+      {{/if}}
       {{else}}
       No profile information
     {{/if}}
